--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: "Every failure is leading towards success."
 keyword: "Machine learning, Statistics, Neuron science, Signal processing"
 url: "http://alexanderZhujiageng.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
-github_repo: "https://github.com/qiubaiying/qiubaiying.github.io.git" # you code repository
+github_repo: "https://github.com/AlexanderZhujiageng?tab=repositories" # you code repository
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
